tests/lexer_test/errors/empty.outlexerrors
Empty file, no such file at: tests/lexer_test/cases/empty.src